# zero-latency-x

./: Future.md  Makefile  README.md  bootstrap.sh  docker-compose.yml
ai_preprocess/: Dockerfile  requirements.txt
ai_preprocess/src/: models.py  server.py
config/: network.yaml  ptp4l.conf
data_ingest/: Cargo.toml  Dockerfile  build.rs
data_ingest/proto/: ingest.proto
data_ingest/src/: feed_binance.rs  lib.rs  main.rs  parser_fpga.c
desktop-app/: package-lock.json  package.json  tailwind.config.ts
desktop-app/.next/: trace
desktop-app/electron/: main.ts
desktop-app/server/: index.ts
desktop-app/src/app/: page.tsx
desktop-app/src/app/settings/: page.tsx
execution_api/: Dockerfile  go.mod
execution_api/src/: api.go
matching_engine/: CMakeLists.txt  Dockerfile
matching_engine/src/: auction.cpp  main.cpp  matcher.cpp
strategy_engine/: Dockerfile  go.mod
strategy_engine/cmd/engine/: main.go
strategy_engine/proto/: ingest.pb.go  ingest.proto
tests/: dummy_e2e.sh  e2e_test.sh
ui/: Dockerfile  index.html  package.json  server.js
ui/src/: App.css  App.tsx  eyeTracker.ts
zl_chain/: Cargo.toml  Dockerfile
zl_chain/src/: consensus.rs  lib.rs  rpc.rs  storage.rs
